# nataly

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  astrological_report.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
examples/: all_bodies_full_report.py  astrological_analysis.py  basic_usage.py  config_usage.py
nataly/: __init__.py  chart.py  config.py  constants.py  core.py  engine.py  models.py  utils.py
tests/: references.py  test_core.py  test_nataly_library.py  test_reference.py  test_utils.py
